# add_subdirectory(trie)

# add_library(dsbus STATIC ${ALL_OBJECT_FILES})

# set(DataStructures_LIBS
#     libTrie)

# find_package(Threads REQUIRED)

# set(DSBUS_THIRDPARTY_LIBS
#     fmt
#     Threads::Threads
# )

# target_link_libraries(
#     dsbus
#     ${DataStructures_LIBS}
#     ${DSBUS_THIRDPARTY_LIBS}
# )

# target_include_directories(
#     dsbus PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src>
# )



